SFDC Automation/src/objects/Historical_Pipeline__c.object
<CustomObject>
    <description>Object used to store historical opportunity pipeline data via an Analytic Snapshot</description>
    <fields>
        <fullName>CY_Average_Age_M__c</fullName>
        <label>CY - Average Age (M)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_Average_EVA__c</fullName>
        <label>CY - Average EVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CY_OC_Amount__c</fullName>
        <label>CY - OC Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_OC_Count__c</fullName>
        <label>CY - OC Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_Per_of_Total__c</fullName>
        <label>CY - % of Total $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_SH_Amount__c</fullName>
        <label>CY - SH Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_SH_Count__c</fullName>
        <label>CY - SH Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_Total_Gross__c</fullName>
        <label>CY - Total Gross $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CY_Total_of_Deals__c</fullName>
        <label>CY - Total # of Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_WSO_Amount__c</fullName>
        <label>CY - WSO Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CY_WSO_Count__c</fullName>
        <label>CY - WSO Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Ratio_All__c</fullName>
        <label>Close Ratio - All</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Ratio_Quoted__c</fullName>
        <label>Close Ratio - Quoted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <defaultValue>TEXT(MONTH(TODAY()))</defaultValue>
        <description>Holds the month of the Actual data loaded</description>
        <label>Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PY_Average_Age_M__c</fullName>
        <description>Previous Year</description>
        <label>PY - Average Age (M)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Close_Ratio_All__c</fullName>
        <description>Previous Year Close Ratio</description>
        <inlineHelpText>Previous Year Close Ratio</inlineHelpText>
        <label>PY Close Ratio - All</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Close_Ratio_Quoted__c</fullName>
        <label>PY Close Ratio - Quoted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PY_Total_Gross__c</fullName>
        <label>PY - Total Gross $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PY_Total_of_Deals__c</fullName>
        <description>Previous Year</description>
        <label>PY - Total # of Deals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Needed_to_Reach_Quota__c</fullName>
        <label>Pipeline Needed to Reach Quota</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Holds the Regional data for each record.</description>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Member__c</fullName>
        <label>Sales Team Member</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <description>Displays Sales Territory for a data record.</description>
        <label>Sales Territory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <defaultValue>TEXT(YEAR( TODAY() ))</defaultValue>
        <description>Holds the year of the data loaded.  With Month field, represents data load on said month and year</description>
        <label>Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Historical Pipeline</label>
    <nameField>
        <displayFormat>PL-{0000000}</displayFormat>
        <label>Historical Pipeline #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Pipelines</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>